# AMSwarm

./: .clang-format  .clang-tidy  .gitignore  CMAKE_PRESETS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
_codeql_build_dir/: CTestTestfile.cmake  Makefile  amswarm_tests  amswarm_tests[1]_include.cmake  amswarm_tests[1]_tests.cmake
amswarm/: CMakeLists.txt  amsolver.h  constraint.cpp  constraint.h  drone.cpp  drone.h  swarm.cpp  swarm.h  utils.cpp  utils.h
bindings/: CMakeLists.txt  amswarm_wrapper.cpp
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/Testing/Temporary/: CTestCostData.txt
build-test/amswarm/: Makefile  cmake_install.cmake
build-test/bindings/: Makefile  cmake_install.cmake
build-test/tests/: CTestTestfile.cmake  Makefile  amswarm_tests  amswarm_tests[1]_include.cmake  amswarm_tests[1]_tests.cmake  cmake_install.cmake
cpp/: CMakeLists.txt
cpp/include/: amsolver.h  constraint.h  drone.h  dronesolver.h  simulator.h  swarm.h  utils.h
cpp/params/: model_params.yaml  simulation_params.yaml
cpp/src/: amsolver.cpp  constraint.cpp  drone.cpp  dronesolver.cpp  simulator.cpp  swarm.cpp  utils.cpp
cpp/tests/: CMakeLists.txt  test_basic.cpp
examples/cpp/: main.cpp
examples/python/: bf_constraint_test.py  crazyflow_example.py  generate_random_waypoints.py  logger.py  offline_sim_sweep.py  online_sim_sweep.py  profile_batch.py  profiling.py  randomized_offline_sim.py  randomized_online_sim.py  refactor.py  refactor2.py  run_offline_sim.py  run_online_sim.py  simulate_continuity_constraint.py  swarm_example.py  test.mat  tuning.py  utils.py
examples/python/data/: continuity.json  no_continuity.json
include/amswarm/: amsolver.h  drone.h  swarm.h  utils.h
pybindings/: __init__.py  amswarm_wrapper.cpp
python/: amswarm_wrapper.cpp  example.cpp  simulator_py.cpp
src/: CMakeLists.txt  drone.cpp  swarm.cpp  utils.cpp
src/amswarm/: constraint.cpp
tests/: CMakeLists.txt  README.md  test_amsolver.cpp  test_basic.cpp  test_constraint.cpp  test_drone.cpp  test_swarm.cpp  test_utils.cpp
tests/python/: README.md  __init__.py  test_crazyflow_example.py  test_import.py
