[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.10.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "amswarm"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Ben Sprenger" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
keywords = ["drones", "control", "swarm", "path planning"]
dependencies = []
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
crazyflow = [
    "crazyflow>=0.0.1",
]

[tool.scikit-build]
wheel.packages = ["amswarm"]
cmake.build-type = "Release"
